--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 	<meta charset="UTF-8">
-	<link rel="icon" type="image/ico"
-		href="https://img.freepik.com/vector-gratis/edificio-hotel-flat_23-2148162501.jpg?w=2000">
+	<link rel="icon" type="image/ico" href="https://img.freepik.com/vector-gratis/edificio-hotel-flat_23-2148162501.jpg?w=2000"
+	 alt="Icono de edificio de hotel">
 	<link rel="stylesheet" href="Actividad4A.css " id="style-sheet" type="text/css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<title>Cuestionario</title>
@@ -26,8 +26,8 @@
 			</div>
 
 			<div>
-				<label class="parts">Nombre de usuario: <span class="red">*</span></label>
-				<input type="text" id="Nombre" placeholder="Nombre" required>
+				<label for="nombre"  class="parts">Nombre de usuario: <span class="red">*</span></label>
+				<input type="text" id="Nombre" name="Nombre" placeholder="Nombre" required>
 				<a class="just" target="black" href="detalles.html#nombredeusuario">Justificacion</a>
 			</div>
 
