--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 		<div class="bg-card normal">
 			<section>
-				<h2>Comentarios o sugerencias <a target="black" class="just" title="justificacion de comentarios y sugerencias"
+				<h2 class="sub">Comentarios o sugerencias <a target="black" class="just" title="justificacion de comentarios y sugerencias"
 						href="detalles.html#comentsugere">Justificacion</a></h2>
 				<textarea id="comentarios" name="comment" rows=5 cols=40>
 			</textarea>
@@ -183,7 +183,7 @@
 
 			<section class="normal">
 				<div>
-					<h2>Contacto</h2>
+					<h2 class="sub">Contacto</h2>
 				</div>
 				<div>
 					<label for="correo">E-mail: </label>
