--- a/index.html
+++ b/index.html
@@ -17,54 +17,47 @@
 		<button  id="btn" class="eye" aria-label="Cambiar de color"><span><i class="fa-solid fa-eye"></i></span></button>
 	</div>
 
-
 	<form action="/detalles.html">
-		<!-- Primera Seccion -->
 		<section class="bg-card normal sec">
-			<div>
-				<h2 class="title"> Datos Personales </h2>
-			</div>
-
-			<div>
-				<label for="Nombre"  class="parts">Nombre de usuario: <span class="red">*</span></label>
-				<input type="text" id="Nombre" name="Nombre" placeholder="Nombre" required>
-				<a class="just" target="black" title="Justificacion del nombre de usuario" href="detalles.html#nombredeusuario">Justificacion</a>
-			</div>
-
-
-			<div>
-				<label for="Contraseña" class="parts">Contraseña: <span class="red">*</span></label>
-				<input type="password" id="Contraseña" name="Contraseña" placeholder="Contraseña" required>
-				<a class="just" target="black" title="Justificacion de la contraseña" href="detalles.html#contraseña">Justificacion</a>
-			</div>
-
-
-			<div>
-				<label for="Contraseña_r" class="parts">Repetir Contraseña: <span class="red">*</span></label>
-				<input type="password" id="Contraseña_r" name="Contraseña_r" placeholder="Contraseña" required>
-				<a class="just" target="black" title="Justificacion de repetir contraseña" href="detalles.html#Contraseña_r">Justificacion</a>
-			</div>
-
-
-			<div>
-				<label for="direccion" class="parts">Dirección: <span class="red">*</span></label>
-				<input type="text" id="direccion" name="direccion" placeholder="Direccion" required>
-				<a class="just" target="black" title="Justificacion de Direccion" href="detalles.html#direccion">Justificacion</a>
-			</div>
-
-
-			<div>
-				<label for="ciudad" class="parts">Ciudad: <span class="red">*</span></label>
-				<input type="text" id="ciudad" name="ciudad" placeholder="Ciudad" required>
-				<a class="just" target="black" title="Justificacion de ciudad" href="detalles.html#ciudad">Justificacion</a>
-			</div>
-
-
-			<div>
-				<label for="provincia" class="parts">Provincia: <span class="red">*</span></label>
-				<input type="text" id="provincia" name="provincia" placeholder="Provincia" required>
-				<a class="just" target="black" title="Justificacion de provincia" href="detalles.html#provincia">Justificacion</a>
-			</div>
+		  <div>
+			<h2 class="title">Datos Personales</h2>
+		  </div>
+	  
+		  <div>
+			<label for="Nombre" class="parts">Nombre de usuario: <span class="red">*</span></label>
+			<input type="text" id="Nombre" name="Nombre" placeholder="Nombre" required>
+			<a class="just" href="detalles.html#nombredeusuario" title="Justificación del nombre de usuario" target="black">Justificación</a>
+		  </div>
+	  
+		  <div>
+			<label for="Contraseña" class="parts">Contraseña: <span class="red">*</span></label>
+			<input type="password" id="Contraseña" name="Contraseña" placeholder="Contraseña" required>
+			<a class="just" href="detalles.html#contraseña" title="Justificación de la contraseña" target="black">Justificación</a>
+		  </div>
+	  
+		  <div>
+			<label for="Contraseña_r" class="parts">Repetir Contraseña: <span class="red">*</span></label>
+			<input type="password" id="Contraseña_r" name="Contraseña_r" placeholder="Contraseña" required>
+			<a class="just" href="detalles.html#Contraseña_r" title="Justificación de repetir contraseña" target="black">Justificación</a>
+		  </div>
+	  
+		  <div>
+			<label for="direccion" class="parts">Dirección: <span class="red">*</span></label>
+			<input type="text" id="direccion" name="direccion" placeholder="Direccion" required>
+			<a class="just" href="detalles.html#direccion" title="Justificación de dirección" target="black">Justificación</a>
+		  </div>
+	  
+		  <div>
+			<label for="ciudad" class="parts">Ciudad: <span class="red">*</span></label>
+			<input type="text" id="ciudad" name="ciudad" placeholder="Ciudad" required>
+			<a class="just" href="detalles.html#ciudad" title="Justificación de ciudad" target="black">Justificación</a>
+		  </div>
+	  
+		  <div>
+			<label for="provincia" class="parts">Provincia: <span class="red">*</span></label>
+			<input type="text" id="provincia" name="provincia" placeholder="Provincia" required>
+			<a class="just" href="detalles.html#provincia" title="Justificación de provincia" target="black">Justificación</a>
+		  </div>
 		</section>
 		<!-- inicio de cantidad de personas -->
 		<section class="bg-card normal sec">
@@ -175,7 +168,7 @@
 
 		<div class="bg-card normal">
 			<section>
-				<h2 class="sub">Comentarios o sugerencias <a target="black" class="just" title="justificacion de comentarios y sugerencias"
+				<h2>Comentarios o sugerencias <a target="black" class="just" title="justificacion de comentarios y sugerencias"
 						href="detalles.html#comentsugere">Justificacion</a></h2>
 				<textarea id="comentarios" name="comment" rows=5 cols=40>
 			</textarea>
@@ -183,7 +176,7 @@
 
 			<section class="normal">
 				<div>
-					<h2 class="sub">Contacto</h2>
+					<h2>Contacto</h2>
 				</div>
 				<div>
 					<label for="correo">E-mail: </label>
